@@ -4,7 +4,7 @@
 
   <groupId>io.toolisticon.maven.parent</groupId>
   <artifactId>maven-parent-kotlin-base</artifactId>
-  <version>2024.3.1</version>
+  <version>2024.3.2</version>
 
   <name>Maven Parent - Kotlin Base</name>
   <description>Maven parent for a holistic kotlin lib project.</description>
@@ -303,7 +303,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.12.1</version>
+          <version>3.13.0</version>
           <configuration>
             <encoding>${project.build.sourceEncoding}</encoding>
             <source>${java.version}</source>
@@ -453,7 +453,7 @@
           <configuration>
             <classesDirectory>${project.build.outputDirectory}</classesDirectory>
             <!--suppress UnresolvedMavenProperty -->
-            <argLine>--illegal-access=permit ${failsafeArgLine}</argLine>
+            <argLine>${failsafeArgLine}</argLine>
             <systemPropertyVariables>
               <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
             </systemPropertyVariables>
@@ -464,7 +464,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.2.1</version>
         </plugin>
 
         <!-- INSTALL (version) -->
@@ -502,7 +502,7 @@
             <shutdown>kill</shutdown>
             <runOrder>random</runOrder>
             <!--suppress UnresolvedMavenProperty -->
-            <argLine>--illegal-access=permit ${surefireArgLine} -Djava.awt.headless=true -XX:+StartAttachListener</argLine>
+            <argLine>${surefireArgLine} -Djava.awt.headless=true -XX:+StartAttachListener</argLine>
             <systemPropertyVariables>
               <jgiven.report.dir>${project.build.directory}/jgiven-reports</jgiven.report.dir>
             </systemPropertyVariables>
